  which is useful for efficiently modifying files.

  du recognizes -d N as equivalent to --max-depth=N, for compatibility
  with FreeBSD.

  sort now accepts the --debug option, to highlight the part of the
  line significant in the sort, and warn about questionable options.

  sort now supports -d, -f, -i, -R, and -V in any combination.

  stat now accepts the %m format directive to output
  the mount point for a file.

** Changes in behavior

  df now consistently prints the device name for a bind mounted file,
  rather than its aliased target.

  du now uses less than half as much memory when operating on trees
  with many hard-linked files.  With --count-links (-l), or when
  operating on trees with no hard-linked files, there is no change.

  ls -l now uses the traditional three field time style rather than
  the wider two field numeric ISO style, in locales where a style has
  not been specified.  The new approach has nicer behavior in some
  locales, including English, which was judged to outweigh the disadvantage
  of generating less-predictable and often worse output in poorly-configured
  locales where there is an onus to specify appropriate non-default styles.
  [The old behavior was introduced in coreutils-6.0 and had been removed
   for English only using a different method since coreutils-8.1]

  rm's -d now evokes an error;  before, it was silently ignored.

  sort -g now uses long doubles for greater range and precision.

  sort -h no longer rejects numbers with leading or trailing ".", and
  no longer accepts numbers with multiple ".".  It now considers all
  zeros to be equal.

  sort now uses the number of available processors to parallelize
  the sorting operation.  The number of sorts run concurrently can be
  limited with the --parallel option or with external process
  control like taskset for example.

  stat no longer accepts the --context (-Z) option.  Initially it was
  merely accepted and ignored, for compatibility.  Starting two years